--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
     "source": "https://github.com/markocupic/custom-section"
   },
   "require": {
-    "php": ">=5.3",
-    "contao/core": ">=3.2,<4",
-    "contao-community-alliance/composer-plugin": "*",
+    "php":">=5.3.2",
+    "contao/core-bundle":">=3.5 || >=4.3",
+    "contao-community-alliance/composer-plugin":"^2.4.0 || 3.*",
     "pclzip/pclzip": "~2"
   },
   "replace": {
