--- a/composer.json
+++ b/composer.json
@@ -34,14 +34,28 @@
     "contao/core": "3.0.*"
   },
   "autoload": {
+    "psr-4": {
+      "Markocupic\\CustomSection\\": "src/"
+    },
     "classmap": [
-      ""
+      "src/Resources/contao"
+    ],
+    "exclude-from-classmap": [
+      "src/Resources/contao/config",
+      "src/Resources/contao/dca",
+      "src/Resources/contao/languages",
+      "src/Resources/contao/templates"
     ]
   },
   "extra": {
+    "contao-manager-plugin": "Markocupic\\CustomSection\\ContaoManager\\Plugin",
     "contao": {
       "sources": {
-        "": "system/modules/custom-section"
+        "src/Resources/contao/config": "system/modules/custom-section/config",
+        "src/Resources/contao/dca": "system/modules/custom-section/dca",
+        "src/Resources/contao/languages": "system/modules/custom-section/languages",
+        "src/Resources/contao/elements": "system/modules/custom-section/modules",
+        "src/Resources/contao/templates": "system/modules/custom-section/templates"
       }
     }
   }
