--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     "source": "https://github.com/markocupic/custom-section"
   },
   "require": {
-    "php": ">=5.3"
+    "php": ">=5.6.0",
+    "contao/core": ">=3.5",
+    "contao-community-alliance/composer-plugin": "*"
   },
   "replace": {
   },
