--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,8 @@
     "source": "https://github.com/markocupic/custom-section"
   },
   "require": {
-    "php": ">=5.6.0",
-    "contao/core": ">=3.5",
-    "contao-community-alliance/composer-plugin": "*"
+    "contao/core-bundle":"~3.2 || ~4.4",
+    "contao-community-alliance/composer-plugin":"~2.4 || ~3.0"
   },
   "replace": {
   },
