--- a/config/services.yml
+++ b/config/services.yml
@@ -4,5 +4,5 @@ services:
     autoconfigure: true
 
   Markocupic\CustomSection\:
-    resource: ../../
-    exclude: ../../{DependencyInjection,Resources,Model}
+    resource: ../src/
+    exclude: ../src/{DependencyInjection}
